syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SampleServiceProto";

package sampleservice;


service SampleCrudServiceApi {
  rpc Gets (Empty) returns (responseEntitiesModel);
  rpc GetSingle (entityRequest) returns (responseEntityModel);
  rpc Create (CreationRequest) returns (operationCompleteModel);
  rpc Update (UpdateRequest) returns (operationCompleteModel);
  rpc Delete (entityRequest) returns (responseModel);
}


message entityModel {
  string id = 1;
  string name= 2;
  string description= 3;
  google.protobuf.Timestamp referenceDate= 4;
  google.protobuf.Timestamp modifiedDate= 5;
}


message entityRequest {
  string id= 1;
   google.protobuf.Timestamp sessionDate = 2;
}

message entityCreationRequest {
  string name= 1;
  string description= 2;
  google.protobuf.Timestamp referenceDate= 3;
}

message CreationRequest {
   entityCreationRequest item = 1;
   google.protobuf.Timestamp sessionDate = 2;
}

message entityUpdateRequest {
  string id = 1;
  string name= 2;
  string description= 3;
  google.protobuf.Timestamp referenceDate= 4;
}

message UpdateRequest {
   entityUpdateRequest item = 1;
   google.protobuf.Timestamp sessionDate = 2;
}


// Exception model
message apiException {
  string Message = 1;
  int32 StatusCode = 2;
}

// Response model
message responseModel {
  bool success = 1;
  google.protobuf.Any data  = 2;
  repeated apiException exceptions = 3;
}

message operationCompleteModel {
  bool success = 1;
  string id = 2;
  google.protobuf.Any data  = 3;
  repeated apiException exceptions = 4;
}

// returns multiple entities
message responseEntitiesModel {
  bool success = 1;
  repeated entityModel items = 2;
  google.protobuf.Any data  = 3;
  repeated apiException exceptions = 4;
}

// returns single entity
message responseEntityModel {
  bool success = 1;
  entityModel item = 2;
  google.protobuf.Any data  = 3;
  repeated apiException exceptions = 4;
}




//empty message
message Empty {

}